prevent mobile overflow

--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body, html{
     overflow:hidden;
 }   
 
+#container{
+    overflow: hidden;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    position:absolute;
+}
+
 body{
     cursor:default
 }
@@ -320,7 +329,6 @@ button {
 body {
   font-family: sans-serif;
   margin: 0;
-  padding: 10px;
 }
 
 .dropdown {
